--- a/assets/dynamic_elements/load_screen.html
+++ b/assets/dynamic_elements/load_screen.html
@@ -9,13 +9,12 @@
         margin: 0;
         padding: 0; 
         background: #525252;
-        width: 250px;
-        height: 250px;
+        width: 50vw;
+        height: 50vw;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top: -100px;
-        margin-left: -100px;
+        top:25vw;
+        left:25vw
+
     }
     .loading-wrapper>.b{
         position: absolute;
@@ -24,41 +23,41 @@
         transform: translate(-50%,-50%);
     }
     .loading-wrapper .b1{
-        width: 124px;
-        height: 124px;
+        width: 22vw;
+        height: 22vw;
         border-radius: 50%;
-        border-left: 5px solid #B5B5B5;
-        border-right: 5px solid #B5B5B5;
-        border-top: 5px solid #B5B5B5;
-        border-bottom: 5px solid transparent;
+        border-left: 1vw solid #B5B5B5;
+        border-right: 1vw solid #B5B5B5;
+        border-top: 1vw solid #B5B5B5;
+        border-bottom: 1vw solid transparent;
     }
     .loading-wrapper .b2{
-        width: 150px;
-        height: 150px;
+        width: 27vw;
+        height: 27vw;
         border-radius: 50%;
-        border-left: 5px solid white;
-        border-right: 5px solid transparent;
-        border-top: 5px solid white;
-        border-bottom: 5px solid white;
+        border-left: 1vw solid white;
+        border-right: 1vw solid transparent;
+        border-top: 1vw solid white;
+        border-bottom: 1vw solid white;
     
     }
     .loading-wrapper .b3{
-        width: 176px;
-        height: 176px;
+        width: 32vw;
+        height: 32vw;
         border-radius: 50%;
-        border-left: 5px solid transparent;
-        border-right: 5px solid #707070;
-        border-top: 5px solid #707070;
-        border-bottom: 5px solid #707070;
+        border-left: 1vw solid transparent;
+        border-right: 1vw solid #707070;
+        border-top: 1vw solid #707070;
+        border-bottom: 1vw solid #707070;
     }
     .loading-wrapper .b4{
-        width: 202px;
-        height: 202px;
+        width: 37vw;
+        height: 37vw;
         border-radius: 50%;
-        border-left: 5px solid #333333;
-        border-right: 5px solid #333333;
-        border-top: 5px solid #333333;
-        border-bottom: 5px solid #333333;
+        border-left: 1vw solid #333333;
+        border-right: 1vw solid #333333;
+        border-top: 1vw solid #333333;
+        border-bottom: 1vw solid #333333;
     }
     @keyframes ro{
         0%{
